# urlkpi

./: .gitattributes  README.md  index.html  pyproject.toml
.github/: FUNDING.yml
core/: db.sqlite3  integrity_sha_md5.py  manager.py  operational.py  operational_chronology.py  operational_logs.py  operational_micro.py  operational_service.py  operational_sql.py  operational_statistics.py  sql_console.sh
core/core/: settings.py  urls.py
core/dash/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
core/dash/migrations/: 0001_initial.py  0002_tasks_done.py  0003_rename_tasks_task.py  0004_boiler.py  0005_service.py  0006_errormanager.py  0007_rename_errormanager_errormanagement.py  0008_alter_errormanagement_error_datetime.py  0009_navbar.py  0010_alter_navbar_icon.py  0011_navbar_title.py  0012_cvemanagement.py  0013_content.py  0014_content_wizard_1_content_wizard_2_content_wizard_3_and_more.py  0015_alter_content_content_1_alter_content_content_2_and_more.py
core/dash/templatetags/: navbar_tags.py  service_tags.py
core/features/: separate_tests.feature  separate_tests_1.feature
core/features/steps/: separate_tests.py  separate_tests_1.py
core/garage/: operational_logistic.py
core/integrity/: sha.py
core/modules/copyright/: README.md
core/modules/cybersecurity/: README.md  cve_details.py  cve_list.py  cve_source.py
core/modules/metadata/: demo_route_gif.json
core/modules/pep_errors/: walk.py
core/queries/: clean_duplicate_date.sql
core/templates/: 400.html  403.html  404.html  500.html  502.html
src/local/: __init__.py
(+28 files in other folders)
