[project]
name = "local"
version = "0.1.0"
description = "I don't know what I'm doing"
authors = [
    { name = "jeanpmodev", email = "jeanpmodev@gmail.com" }
]
dependencies = [
    "django>=6.0.3",
    "pycodestyle>=2.14.0",
    "django-extensions>=4.1",
    "pyparsing>=3.3.2",
    "pydot>=4.0.1",
    "graphviz>=0.21",
    "mwclient>=0.11.0",
    "behave>=1.3.3",
    "py-w3c>=0.3.1",
    "eralchemy>=1.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/local"]
